--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,12 +1,39 @@
 .chat {
+    /* display: flex;
+    flex-direction: column; */
+    flex: 0.65;
+}
+
+.inner_welcome_chat {
     display: flex;
     flex-direction: column;
-    flex: 0.65;
+    flex: 0.65 1;
+    height: -moz-available;          /* WebKit-based browsers will ignore this. */
+    height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+    /* height: fill-available; */
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat_welcome_img {
+    width: 640px;
+}
+
+.inner_chat {
+    display: flex;
+    flex-direction: column;
+    flex: 0.65 1;
+    height: 100%;
+    /* height: -moz-available;          WebKit-based browsers will ignore this. */
+    /* height: -webkit-fill-available;  Mozilla-based browsers will ignore this. */
+    /* height: fill-available; */
 }
 
 .chat_header {
     padding: 20px;
     display: flex;
+    background-color: #f0f0f0 !important;
     align-items: center;
     border-bottom: 1px solid lightgray;
 }
@@ -27,11 +54,12 @@
 
 .chat_body {
     flex: 1;
-    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    background-image: url("./Assets/chatBackground.jpeg");
+    background-size: cover;
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .chat_message {
@@ -65,6 +93,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #f0f0f0 !important;
     height: 62px;
     border-top: 1px solid lightgray;
 }
@@ -79,6 +108,9 @@
     outline-width: 0;
     border-radius: 30px;
     padding: 10px;
+    padding-left: 20px !important;
+    margin-left: 10px;
+    margin-right: 20px;
     border: none;
     outline-width: 0;
 }
@@ -88,6 +120,18 @@
 }
 
 .chat_footer > .MuiSvgIcon-root {
-    padding: 10px;
+    /* padding: 10px; */
     color: gray;
+    margin-left: 10px;
+}
+
+.chat-emoji {
+    position: absolute;
+    position: absolute;
+    margin-top: 108px;
+    margin-left: 8px;
+}
+
+.emoji-mart {
+    width: 620px i !important;
 }
