--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -3,15 +3,17 @@
     padding: 20px;
     cursor: pointer;
     border-bottom: 1px solid #f6f6f6;
+    align-items: center;
 }
 
 .sidebarChat:hover {
     background-color: #ebebeb;
 }
 
-.sidebarChat_info > h2 {
-    font-size: 16px;
-    margin-bottom: 8px;
+.sidebarChat_info > p {
+    font-size: 18px;
+    margin-bottom: 0;
+    color: black;
 }
 
 .sidebarChat_info {
